--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
     </div>
     <div id="post-form" style="display:none;">
       <input id="post-text" placeholder="Текст поста">
+<iframe
+  id="inlineFrameExample"
+  title="Inline Frame Map"
+  width="100%"
+  height="100%"
+  frameborder="1"
+  allowfullscreen="true"
+  src="https://iimg.su/?ysclid=ma6bu2dfqa232588408"
+>
+</iframe>
       <input id="post-img" placeholder="Ссылка на изображение (необязательно)">
       <button onclick="sendPost()">Опубликовать</button>
     </div>
