--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     .post img {
       max-width: 100%; margin-top: 10px;
     }
+    .post iframe {
+      width: 100%; height: 300px; margin-top: 10px;
+    }
     .delete-btn {
       background: darkred; margin-top: 5px;
     }
@@ -68,17 +71,8 @@
     </div>
     <div id="post-form" style="display:none;">
       <input id="post-text" placeholder="Текст поста">
-<iframe
-  id="inlineFrameExample"
-  title="Inline Frame Map"
-  width="100%"
-  height="100%"
-  frameborder="1"
-  allowfullscreen="true"
-  src="https://iimg.su/?ysclid=ma6bu2dfqa232588408"
->
-</iframe>
       <input id="post-img" placeholder="Ссылка на изображение (необязательно)">
+      <input id="post-video" placeholder="Ссылка на видео (необязательно)">
       <button onclick="sendPost()">Опубликовать</button>
     </div>
     <div id="post-list"></div>
@@ -221,12 +215,19 @@
     function sendPost() {
       const text = document.getElementById("post-text").value;
       const img = document.getElementById("post-img").value;
-      if (text) {
+      const video = document.getElementById("post-video").value;
+
+      const videoEmbed = video && video.includes("drive.google.com") ? 
+        `<iframe src="https://drive.google.com/file/d/${video.split("/d/")[1].split("/")[0]}/preview" frameborder="0" allowfullscreen></iframe>` 
+        : '';
+
+      if (text || img || video) {
         db.collection("channels").doc(currentChannel).collection("posts").add({
-          text, img, created: Date.now()
+          text, img, videoEmbed, created: Date.now()
         }).then(() => {
           document.getElementById("post-text").value = "";
           document.getElementById("post-img").value = "";
+          document.getElementById("post-video").value = "";
           loadPosts();
         });
       }
@@ -239,7 +240,7 @@
           const data = doc.data();
           const div = document.createElement("div");
           div.className = "post";
-          div.innerHTML = `<div>${data.text}</div>${data.img ? `<img src="${data.img}">` : ""}`;
+          div.innerHTML = `<div>${data.text}</div>${data.img ? `<img src="${data.img}">` : ""}${data.videoEmbed || ""}`;
           if (currentUserId === currentChannelOwner) {
             const del = document.createElement("button");
             del.className = "delete-btn";
@@ -258,22 +259,21 @@
       if (confirm("Удалить канал и все посты?")) {
         db.collection("channels").doc(currentChannel).collection("posts").get().then(snap => {
           const batch = db.batch();
-          snap.forEach(doc => batch.delete(doc.ref));
-          batch.commit().then(() => {
-            db.collection("channels").doc(currentChannel).delete().then(() => {
-              back();
-              loadChannels();
-              alert("Канал удалён");
-            });
-          });
+      snap.forEach(doc => batch.delete(doc.ref));
+      batch.commit().then(() => {
+        db.collection("channels").doc(currentChannel).delete().then(() => {
+          alert("Канал удалён");
+          loadChannels();
+          channelPage.style.display = "none";
+          appBox.style.display = "block";
         });
-      }
-    }
+      });
+    });
+  }
+}
 
-    function back() {
-      channelPage.style.display = "none";
-      appBox.style.display = "block";
-    }
-  </script>
-</body>
-</html>
+function back() {
+  channelPage.style.display = "none";
+  appBox.style.display = "block";
+}
+</script> </body> </html>
