--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
     .delete-btn {
       background: darkred; margin-top: 5px;
     }
+.page {
+      display: none;
+    }
+    .active {
+      display: block;
+    }
   </style>
 </head>
 <body>
+
   <div class="container" id="auth">
     <h2>AniMedia</h2>
     <input id="email" type="email" placeholder="Email">
@@ -49,13 +56,22 @@
     <button onclick="login()">Войти</button>
     <button onclick="register()">Регистрация</button>
   </div>
+<div id="home" class="page active">
 
   <div class="container" id="app" style="display:none;">
     <h3>Привет, <span id="user-email"></span></h3>
+<a href="#" onclick="showPage('second')" style="position: fixed; top: 10px; right: 10px; z-index: 1000;">
+      <img src="https://i.postimg.cc/mrYvBqPV/150898060-10519417.png" alt="Перейти" width="70px" height="70px">
+    </a>
     <button onclick="logout()">Выйти</button>
     <div id="channel-section">
       <button onclick="createChannelPrompt()">Создать канал</button>
       <button id="my-channel-btn" style="display:none;" onclick="enterChannel(myChannelId)">Мой канал</button>
+<h4>Мои каналы:</h4>
+<div id="my-channels-list"></div>
+<h4>Каналы, на которые вы подписаны:</h4>
+<div id="subscribed-channels-list"></div>
+
     </div>
 <input id="search" placeholder="Поиск по имени канала" oninput="searchChannels()">
     <h4>Каналы:</h4>
@@ -76,12 +92,35 @@
       <input id="post-img" placeholder="Ссылка на изображение (необязательно)">
       <input id="post-video" placeholder="Ссылка на видео (необязательно)">
       <button onclick="sendPost()">Опубликовать</button>
+
     </div>
+
     <div id="post-list"></div>
+
     <button onclick="back()">Назад</button>
   </div>
-
+</div>
+<!-- Вторая өөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөөө "страница" -->
+  <div id="second" class="page">
+    <iframe
+  id="inlineFrameExample"
+  title="Inline Frame Map"
+  width="100%"
+  height="500"
+  frameborder="1"
+  allowfullscreen="true"
+  src="https://nurcoin07.github.io/testm/"
+>
+</iframe>
+    <button onclick="showPage('home')">Назад</button>
+  </div>
   <script>
+function showPage(pageId) {
+      document.querySelectorAll('.page').forEach(page => {
+        page.classList.remove('active');
+      });
+      document.getElementById(pageId).classList.add('active');
+    }
     const firebaseConfig = {
       apiKey: "AIzaSyBpYjMmOiSSoItRuS9guy2c5KSH9y5DBmc",
       authDomain: "network-my.firebaseapp.com",
@@ -135,14 +174,15 @@
         authBox.style.display = "none";
         appBox.style.display = "block";
         userEmail.textContent = user.email;
-
+        
         const channelSnap = await db.collection("channels").where("owner", "==", currentUserId).get();
         if (!channelSnap.empty) {
           myChannelId = channelSnap.docs[0].id;
           myChannelBtn.style.display = "block";
-        }
-
-        loadChannels();
+}
+loadChannels();
+    loadSubscribedChannels();
+    loadMyChannels();
       } else {
         authBox.style.display = "block";
         appBox.style.display = "none";
@@ -150,6 +190,32 @@
         myChannelId = null;
       }
     });
+function loadMyChannels() {
+  myChannelsList.innerHTML = "";
+  db.collection("channels").where("owner", "==", currentUserId).get().then(snap => {
+    snap.forEach(doc => {
+      const data = doc.data();
+      const div = document.createElement("div");
+      div.className = "channel";
+      div.onclick = () => enterChannel(doc.id);
+      div.innerHTML = `<img src="${data.avatar || 'https://via.placeholder.com/40'}"><div>${data.name}</div>`;
+      myChannelsList.appendChild(div);
+    });
+  });
+}
+function loadSubscribedChannels() {
+  subscribedChannelsList.innerHTML = "";
+  db.collection("channels").where("subscribers", "array-contains", currentUserId).get().then(snap => {
+    snap.forEach(doc => {
+      const data = doc.data();
+      const div = document.createElement("div");
+      div.className = "channel";
+      div.onclick = () => enterChannel(doc.id);
+      div.innerHTML = `<img src="${data.avatar || 'https://via.placeholder.com/40'}"><div>${data.name}</div>`;
+      subscribedChannelsList.appendChild(div);
+    });
+  });
+}
 
     function createChannelPrompt() {
       const name = prompt("Название канала:");
@@ -223,6 +289,8 @@ function searchChannels() {
         loadPosts();
       });
     }
+
+
 
     function subscribe() {
       db.collection("channels").doc(currentChannel).update({
